--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     </br>
   </br>
       <p class="section-1-text">Je m'appelle <a class="underline--magical" href="#section-2">Mathis Carlesso</a>. 
-        Je suis à la recherche d'un stage de 3ème année en informatique à Bordeaux afin de consolider les compétences accisent lors de ma formation. 
-Le stage devra débuter au mois de janvier 2022 pour une durée minimum de 3 mois. 
+        Je suis à la recherche d'un stage de 4ème année en informatique à l'étranger afin de consolider les compétences accisent lors de ma formation. 
+Le stage devra débuter au mois de septembre 2022 pour une durée minimum de 3 mois. 
       </p>
       <div class="section-2-start-download">
         <a class="btn btn-bright btn-home" href="images/cv.pdf">Mon CV</a>
@@ -226,6 +226,16 @@ Le stage devra débuter au mois de janvier 2022 pour une durée minimum de 3 moi
             </div>
           </div>
         </div>
+        <div class="start-block">
+          <div class="start-content">
+            <div class="right-column">
+              <h2>Stage en entreprise chez inBlocks à Bordeaux</h2>
+              <p>Durant ce stage j'ai effectué le développement du module d'embarquement et l'authentification des utilisateurs (VusJs, Keycloak, Java).
+              </p>
+              
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     </div>
@@ -266,7 +276,6 @@ Le stage devra débuter au mois de janvier 2022 pour une durée minimum de 3 moi
 
       <strong><a href= "https://github.com/Fireman4740/My_web_site">Code du Site</a></strong>
 
-      <a href="https://mathiscarlesso.com">https://mathiscarlesso.com</a>
     </p>
     <div class="footer-links">
       <a href="https://github.com/Fireman4740/">Github</a>
