--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </br>
       <p class="section-1-text">My name is <a class="underline--magical" href="#section-2">Mathis Carlesso</a>. 
         I am looking for a 4th year internship in computer science abroad in order to consolidate the skills acquired during my training. 
-The internship should start in September 2022 for a minimum duration of 3 months. 
+The internship should start in September 2022 for a minimum duration of 16 weeks. 
       </p>
       <div class="section-2-start-download">
         <a class="btn btn-bright btn-home" href="images/cv.pdf">My Resume</a>
@@ -91,7 +91,7 @@ The internship should start in September 2022 for a minimum duration of 3 months
   </br>
     <span class="section-2-title">Profil</span>
     <p>
-      Passionate about computer science, I am currently in my 2nd year (bac +4) of engineering school at CESI Bordeaux in computer science speciality. 
+      Passionate about computer science, I am currently in my 4th year (bac +4) of engineering school at CESI Bordeaux in computer science speciality. 
 
       <span class="medium">Soft Skills : </span>Curious by nature, I have been interested in many fields such as cryptocurrencies, artificial intelligence, cybersecurity, economics or more generally anything related to science or computer science.
       This knowledge was acquired in a self-taught way and in autonomy.
@@ -154,7 +154,7 @@ The internship should start in September 2022 for a minimum duration of 3 months
             <div class="left-column">
               <h2>
                 Observation internship</h2>
-              <p>I did an internship of 2 weeks in a research laboratory in physics (Laboratoire onde et matière d'aquitaine).
+              <p>I did 2 weeks internship in a research laboratory in physics (Laboratoire onde et matière d'aquitaine).
                 </p>
               
             </div>
@@ -177,7 +177,7 @@ The internship should start in September 2022 for a minimum duration of 3 months
             <div class="left-column">
               <h2>
                 Internship in a company</h2>
-              <p>I did an internship of 2 weeks at the ALPI40 (Agence Landaise Pour l'informatique) computer service of local communities. This allowed me to get involved in an agency specialized in computer science </p>
+              <p>I did 2 weeks internship at the ALPI40 (Agence Landaise Pour l'informatique) computer service of local communities. This allowed me to get involved in an agency specialized in computer science </p>
               
             </div>
           </div>
