--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <main class="site" id="main">
   <section class="section-1" id="section-1">
     <div class="section-1-intro">
-        <div class="glitch" title="Bonjour">Hello </div>
+        <div class="glitch" title="Hello">Hello </div>
     </br>
   </br>
       <p class="section-1-text">My name is <a class="underline--magical" href="#section-2">Mathis Carlesso</a>. 
