--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 The internship should start in September 2022 for a minimum duration of 16 weeks. 
       </p>
       <div class="section-2-start-download">
-        <a class="btn btn-bright btn-home" href="images/cv.pdf">My Resume</a>
+        <a class="btn btn-bright btn-home" href="images/CV_anglais.pdf">My Resume</a>
         <a class="btn btn-light btn-home" href="https://github.com/Fireman4740">GitHub</a>
       </div>
       <span class="section-1-star">***</span>
@@ -251,7 +251,7 @@ The internship should start in September 2022 for a minimum duration of 16 weeks
             <p>“</p><a href="https://github.com/Fireman4740"><span>My github</span></a><p>” →</p>
           </li>
           <li class="section-3-link">
-            <p>“</p><a href="images/cv.pdf"><span>My resume</span></a><p>” →</p>
+            <p>“</p><a href="images/CV_anglais.pdf"><span>My resume</span></a><p>” →</p>
           </li>
           <li class="section-3-link">
             <p>“</p><a href="#"><span>My Linkedln</span></a><p>” →</p>
@@ -279,7 +279,7 @@ The internship should start in September 2022 for a minimum duration of 16 weeks
     </p>
     <div class="footer-links">
       <a href="https://github.com/Fireman4740/">Github</a>
-      <a href="images/cv.pdf">My Resume</a>
+      <a href="images/CV_anglais.pdf">My Resume</a>
     </div>
   </div>
 </footer>
