--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ The internship should start in September 2022 for a minimum duration of 16 weeks
       
       <figure class="imagehover"><img src="images/blockchain.jpg" alt="sq-sample14" />
       <figcaption><ion-icon name="cube-outline"></ion-icon></figcaption>
-        <a href="https://github.com/Fireman4740/defi"></a>
+        <a href="https://github.com/Fireman4740/journal"></a>
           </figure>  
        
 
